--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,5 @@
+{erl_first_files, ["src/supervisor2.erl"]}.
+
 {deps, [
   {rabbitmq_codegen, ".*", {git, "git://github.com/seryl/rabbitmq-codegen.git",
                                 {branch, "rebar"}}}
